Adds Broken Update support
