# internal/api/routes/userRoutes.go
@@ -15,7 +15,8 @@ import (
 func RegisterUserRoutes(s *api.Server) {
 	s.Router.HandleFunc("/users", getUsers()).Methods(http.MethodGet)
 	s.Router.HandleFunc("/users/{id}", getUserById()).Methods(http.MethodGet)
-	s.Router.HandleFunc("/users/", CreateUser()).Methods(http.MethodPost)
+	s.Router.HandleFunc("/users/create/", CreateUser()).Methods(http.MethodPost)
+	s.Router.HandleFunc("/users/update/", UpdateUserById()).Methods(http.MethodPut)
 }
 
 // GetUsers godoc
@@ -72,14 +73,40 @@ func getUserById() http.HandlerFunc {
 // @Description Creates a new User from provided json data
 // @Tags users
 // @Produce json
-// @Param name body models.UserApiRequest true "User" Format(models.UserApiRequest) Example(models.UserApiRequest)
+// @Param name body models.CreateUserRequest true "User" Format(models.CreateUserRequest) Example(models.CreateUserRequest)
 // @Success 200 {} models.User
-// @Router /users/ [post]
+// @Router /users/create [post]
 func CreateUser() http.HandlerFunc {
 	handler := func(w http.ResponseWriter, r *http.Request) {
-		model := api.DecodeJsonRequest(r, w, models.UserApiRequest{})
+		model := api.DecodeJsonRequest(r, w, models.CreateUserRequest{})
 
 		user, err := commands.CreateUser(model)
+
+		if reflect.ValueOf(user).IsNil() {
+			api.EncodeJsonResponse(w, nil, err, http.StatusConflict)
+			return
+		}
+
+		api.EncodeJsonResponse(w, user, err, http.StatusOK)
+
+	}
+	return handler
+}
+
+// UpdateUser godoc
+// @Summary Updates a User by id
+// @Description Updates a new User with the given id
+// @Tags users
+// @Produce json
+// @Param name body models.UpdateUserRequest true "User" Format(models.UpdateUserRequest) Example(models.UpdateUserRequest)
+// @Success 200 {} models.User
+// @Router /users/update/ [put]
+func UpdateUserById() http.HandlerFunc {
+	handler := func(w http.ResponseWriter, r *http.Request) {
+
+		model := api.DecodeJsonRequest(r, w, models.UpdateUserRequest{})
+
+		user, err := commands.UpdateUserById(*model)
 
 		if reflect.ValueOf(user).IsNil() {
 			api.EncodeJsonResponse(w, nil, err, http.StatusConflict)
