# internal/domain/models/CreateUserRequest.go
@@ -1,0 +1,7 @@
+package models
+
+type CreateUserRequest struct {
+	Password *string
+	UserName *string
+	Email    *string
+}
