# internal/domain/models/userApiRequest.go
@@ -1,7 +1,0 @@
-package models
-
-type UserApiRequest struct {
-	Password *string `json:"password"`
-	UserName *string `json:"user_name"`
-	Email    *string `json:"email"`
-}
